# trinetri

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
adr/: 0001-agent-span-schema.md
deploy/: collector-config.yaml  docker-compose.yml
docs/: quickstart.md
docs/screenshots/: .gitkeep
examples/: demo_langgraph.py
extras/: grafana-dashboard.json
src/trinetri_auto/: __init__.py  _ids.py  _instrument.py  agent.py  cli.py  eval.py  worker.py
src/trinetri_auto/_framework/: __init__.py  crewai.py  langgraph.py
src/trinetri_auto/_llm/: __init__.py  anthropic.py  httpx.py  openai.py
src/trinetri_auto/_protocol/: __init__.py  a2a.py  mcp.py
tests/: test_cli.py  test_eval.py  test_id_integrity.py  test_llm_patch.py  test_smoke.py
